Fixed background-attachment on iOS: added a bg div instead of body background-image

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,12 +5,6 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   color: white;
-  background-color: black;
-  background-image: url('../public/images/bg.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-attachment: fixed;
   height: 100%;
   width: 100%;
   scroll-behavior: smooth;
