--- a/styles/main.module.scss
+++ b/styles/main.module.scss
@@ -5,6 +5,17 @@
     height: 100%;
 }
 
+.bg {
+    background-color: black;
+    background-image: url('../public/images/bg.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    z-index: -1;
+}
+
 .content {
     display: block;
     text-align: center;
@@ -45,7 +56,7 @@
     padding-bottom: 50px;
 }
 
-@media only screen and (min-width: 768px){
+@media only screen and (min-width: 768px) {
     .content button {
         display: none;
     }
